syntax = "proto3";

package serenity.protobuf;

import "google/protobuf/timestamp.proto";
import "uuid.proto";

message EventMetaMessage {
    google.protobuf.Timestamp created = 1;
}

message EmailMessage {
    string address = 1;
    bool validated = 2;
}

message HospesUserImportMessage {
    UUID id = 1;
    repeated int32 origin_id = 2;
    repeated EmailMessage emails = 3;
    string first_name = 4;
    string last_name = 5;
    string address = 6;
    string phone_number = 7;
    EventMetaMessage meta = 20;
}

message UserUpdatedMessage {
    UUID id = 1;
    EmailMessage email = 2;
    string first_name = 3;
    string last_name = 4;
    string phone = 5;
    EventMetaMessage meta = 20;
}

message BasicAuthMessage {
    UUID id = 1;
    string password = 2;
    string salt = 3;
    enum AuthSourceEnum {
        HOSPES = 0;
        SERENITY = 1;
    }
    AuthSourceEnum source = 4;
    EventMetaMessage meta = 20;
}

message MembershipUpdateMessage {
    message EventbriteInformation {
        string attendee_id = 1;
        string event_id = 2;
        string order_id = 3;
    }
    enum IssuerEnum {
        JAVA_ZONE = 0;
        JAVA_BIN = 1;
    }
    enum ActionEnum {
        ADD = 0;
        REMOVE = 1;
    }

    google.protobuf.Timestamp from = 1;
    google.protobuf.Timestamp to = 2;
    EventbriteInformation eventbriteInformation = 3;
    IssuerEnum issuer = 4;
    ActionEnum action = 5;
    EventMetaMessage meta = 20;
}

